force-app/main/default/objects/Demo_Data__c/Demo_Data__c.object-meta.xml
<CustomObject>
    <label>Demo Data</label>
    <nameField>
        <displayFormat>DD-{0000000}</displayFormat>
        <label>Demo Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>