force-app/main/default/objects/Demo_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Data</relationshipLabel>
    <relationshipName>Demo_Data_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>