force-app/main/default/objects/Demo_Data__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>100</length>
    <type>Text</type>
    <required>true</required>
</CustomField>