force-app/main/default/objects/Demo_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>prescription</fullName><default>true</default><label>Prescription</label></value>
            <value><fullName>specialty_pharmacy</fullName><default>false</default><label>Specialty Pharmacy</label></value>
            <value><fullName>claims</fullName><default>false</default><label>Claims</label></value>
            <value><fullName>antibiogram</fullName><default>false</default><label>Antibiogram</label></value>
            <value><fullName>medical_event</fullName><default>false</default><label>Medical Event</label></value>
            <value><fullName>patient_journey</fullName><default>false</default><label>Patient Journey</label></value>
            <value><fullName>formulary</fullName><default>false</default><label>Formulary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>